php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48087 call_user_method() invalid free of arguments
Submitted: 2009-04-27 12:44 UTC Modified: 2009-04-27 12:52 UTC
From: felipe@php.net Assigned: felipe (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.3.0RC1 OS:
Private report: No CVE-ID: None
 [2009-04-27 12:44 UTC] felipe@php.net
Description:
------------
See below.

Reproduce code:
---------------
<?php

class foo {
	public function x() {
		print "hi\n";
	}
}

call_user_method('x', new foo);


Expected result:
----------------
hi

Actual result:
--------------
hi
[Mon Apr 27 09:40:26 2009]  Script:  '../bug.php'
---------------------------------------
/home/felipe/dev/php6/ext/standard/basic_functions.c(4780) : Block 0x00000000 status:
NULL
---------------------------------------


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-04-27 12:52 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5.3 and HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC