- Fixed bug #48087 (call_user_method() invalid free of arguments)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@279435 c90b9560-bf6c-de11-be94-00142212c4b1